Fixed modal appearance bug & text alignment

--- a/src/styling/WaterModal.css
+++ b/src/styling/WaterModal.css
@@ -8,6 +8,7 @@
   gap: 1.5em;
   border-radius: 8px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .buttons {
@@ -49,9 +50,9 @@
   z-index: 200;
 } */
 
-.title-main {
+.these-plants-need-water {
   text-align: center;
-  font-size: 24px;
+  font-size: 1em;
   margin-inline: 1.5em;
   margin-bottom: 0.25em;
   color: black !important;
